1 add global exception hendler for controllers 2 add api method for test gateway