@@ -1,48 +1,54 @@
 package rococo.service;
 
-import grpc.rococo.CountriesResponse;
-import grpc.rococo.CountryResponse;
-import jakarta.annotation.Nonnull;
-import jakarta.annotation.Nullable;
-import org.springframework.beans.factory.annotation.Autowired;
+import io.grpc.StatusRuntimeException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
+import rococo.controller.exception.ResourceNotFoundException;
+import rococo.controller.exception.ValidationException;
 import rococo.service.client.CountryGrpcClientService;
 import rococo.model.CountryJson;
+import rococo.service.exception.GrpcExceptionUtil;
 
-import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletionException;
 
 @Component
 public class CountryServiceToClientGrpc implements CountryService {
 
     private final CountryGrpcClientService countryGrpcClientService;
 
-    @Autowired
-    public CountryServiceToClientGrpc(CountryGrpcClientService countryRepository) {
-        this.countryGrpcClientService = countryRepository;
+    public CountryServiceToClientGrpc(CountryGrpcClientService countryGrpcClientService) {
+        this.countryGrpcClientService = countryGrpcClientService;
     }
 
 
     @Override
-    public Page<CountryJson> allCountries(@Nullable String searchQuery,
-                                          @Nonnull Pageable pageable) {
-        CompletableFuture<CountriesResponse> response = countryGrpcClientService.getAllCountries(searchQuery, pageable);
-        return response.thenApply(resp -> {
-            List<CountryJson> countryJsonList = resp.getCountriesList().stream()
-                    .map(CountryJson::fromCountryResponse)
-                    .collect(Collectors.toList());
-            return new PageImpl<>(countryJsonList);
-        }).join();
+    public Page<CountryJson> getAllCountries(String searchQuery, Pageable pageable) {
+        try {
+            return countryGrpcClientService.getAllCountries(searchQuery, pageable)
+                    .thenApply(response -> new PageImpl<>(
+                            response.getCountriesList().stream()
+                                    .map(CountryJson::fromCountryResponse)
+                                    .toList()
+                    ))
+                    .join();
+        } catch (CompletionException e) {
+            throw GrpcExceptionUtil.convertGrpcException(e);
+        }
     }
 
     @Override
-    public CountryJson countryById(UUID countryId) {
-        CompletableFuture<CountryResponse> response = countryGrpcClientService.getCountryById(countryId.toString());
-        return response.thenApply(CountryJson::fromCountryResponse).join();
+    public Optional<CountryJson> getCountryById(UUID countryId) {
+        try {
+            return Optional.of(CountryJson.fromCountryResponse(
+                    countryGrpcClientService.getCountryById(countryId.toString()).join()
+            ));
+        } catch (CompletionException e) {
+            throw GrpcExceptionUtil.convertGrpcException(e, countryId);
+        }
     }
+
 }
